dataset1235/2025-2/1153765216/users/2357208246/executions/3138746197_146336312.log
== RUN (2025-08-12 18:59:29)
-- CODE: 
inteiro = 50//3
dif = (50/6) - inteiro
print(inteiro, dif)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16 -7.666666666666666
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16 -7.666666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 19:04:01)
-- CODE: 
inteiro = 50//3
dif = 50 - 3*inteiro 
print(inteiro,"\n",dif)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 19:03:43)
-- CODE: 
inteiro = 50//3
dif = 50 - 3*inteiro 
print(inteiro, "\n", dif)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 19:03:40)
-- CODE: 
inteiro = 50//3
dif = 50 - 3*inteiro 
print(inteiro, "\n", dif)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 19:03:51)
-- CODE: 
inteiro = 50//3
dif = 50 - 3*inteiro 
print(inteiro, "\n",dif)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 19:00:59)
-- CODE: 
inteiro = 50//6
dif = inteiro
print(inteiro)
print(\n)
print(dif)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 4
    print(\n)
           ^
SyntaxError: unexpected character after line continuation character
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 4
    print(\n)
           ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 19:03:38)
-- CODE: 
inteiro = 50//3
dif = 50 - 3*inteiro 
print(inteiro, "\n", dif)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 19:03:26)
-- CODE: 
inteiro = 50//3
dif = 50 - 3*inteiro 
print(dif, "\n", 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 19:03:55)
-- CODE: 
inteiro = 50//3
dif = 50 - 3*inteiro 
print(inteiro,"\n",dif)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 19:02:50)
-- CODE: 
inteiro = 50//3
dif = 3*inteiro - 50
print('dif')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
dif
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
dif
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 19:01:09)
-- CODE: 
inteiro = 50//6
dif = inteiro
print(inteiro)
print("\n")
print(dif)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
8
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 19:02:56)
-- CODE: 
inteiro = 50//3
dif = 3*inteiro - 50
print(dif)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
-2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 19:03:48)
-- CODE: 
inteiro = 50//3
dif = 50 - 3*inteiro 
print(inteiro, "\n", dif)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 18:59:06)
-- CODE: 
inteiro = 50//6
dif = (50/6) - inteiro
print dif
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 3
    print dif
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 3
    print dif
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 18:59:13)
-- CODE: 
inteiro = 50//6
dif = (50/6) - inteiro
print(dif)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.3333333333333339
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
0.3333333333333339
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 19:01:39)
-- CODE: 
inteiro = 50//3
dif = (50/3) - inteiro 
print(inteiro)
print("\n")
print(dif)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
0.6666666666666679
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 19:03:05)
-- CODE: 
inteiro = 50//3
dif = 50 - 3*inteiro 
print(dif)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
